Added meat to the API & Core of the Location & ServiceMapper implementations
