# docs/openapi.yaml
@@ -480,6 +480,196 @@ paths:
       security:
         - basic_auth: []
 
+  /api/v1/vote/:
+    get:
+      summary: Get list of votes
+      description: Returns a list of existing Votes
+      operationId: VoteListGet
+      tags:
+        - Vote
+      parameters:
+        - name: filter
+          in: query
+          description: SQL `WHERE` filter for the object data
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Vote'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+      security:
+        - basic_auth: []
+
+  /api/v1/location/:
+    get:
+      summary: Get list of locations
+      description: Returns a list of existing Locations
+      operationId: LocationListGet
+      tags:
+        - Location
+      parameters:
+        - name: filter
+          in: query
+          description: SQL `WHERE` filter for the object data
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Location'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+      security:
+        - basic_auth: []
+    post:
+      summary: Create new Location
+      description: Creates & return the created Location
+      operationId: LocationCreatePost
+      tags:
+        - Location
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Location'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Location'
+        '400':
+          description: Bad request
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+      security:
+        - basic_auth: []
+
+  /api/v1/servicemappig/:
+    get:
+      summary: Get list of service mappings
+      description: Returns a list of existing ServiceMappings
+      operationId: ServiceMappingListGet
+      tags:
+        - ServiceMapping
+      parameters:
+        - name: filter
+          in: query
+          description: SQL `WHERE` filter for the object data
+          required: false
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ServiceMapping'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+      security:
+        - basic_auth: []
+    post:
+      summary: Create new ServiceMapping
+      description: Creates & return the created ServiceMapping
+      operationId: ServiceMappingCreatePost
+      tags:
+        - ServiceMapping
+      parameters: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ServiceMapping'
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServiceMapping'
+        '400':
+          description: Bad request
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+      security:
+        - basic_auth: []
+
+  /api/v1/servicemapping/{id}:
+    get:
+      summary: Get ServiceMapping by ID
+      description: Returns a single ServiceMapping by it's ID
+      operationId: ServiceMappingGet
+      tags:
+        - ServiceMapping
+      parameters:
+        - name: id
+          in: path
+          description: ID of the object
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ServiceMapping'
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '404':
+          description: ServiceMapping not found
+      security:
+        - basic_auth: []
+    delete:
+      summary: Delete the ServiceMapping by ID
+      description: Will remove the ServiceMapping with specified ID
+      operationId: ServiceMappingDelete
+      tags:
+        - ServiceMapping
+      parameters:
+        - name: id
+          in: path
+          description: ID of the object
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: Successful operation
+        '400':
+          description: Only admin can do that
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '404':
+          description: ServiceMapping not found
+      security:
+        - basic_auth: []
+
   /meta/v1/data/:
     get:
       summary: Get the Resource metadata
@@ -767,6 +957,7 @@ components:
         - updated_at
         - name
         - definition
+        - location_ID
       properties:
         ID:
           type: integer
@@ -784,6 +975,10 @@ components:
             gorm: unique
         definition:
           $ref: '#/components/schemas/NodeDefinition'
+        location_ID:
+          type: integer
+          format: int64
+          description: Where the Node is located
 
     NodeDefinition:
       type: object
@@ -912,6 +1107,81 @@ components:
         rand:
           x-go-type: uint32
           description: The last resort to figure out for the winner.
+
+    Location:
+      type: object
+      x-go-json-ignore: true
+      description: >
+        In order to properly distribute the nodes across locations it's better to have this in
+        place to properly redirect the services to the nearest one according to the node location.
+      required:
+        - ID
+        - created_at
+        - name
+        - description
+      properties:
+        ID:
+          type: integer
+          format: int64
+          x-oapi-codegen-extra-tags:
+            gorm: primaryKey
+        created_at:
+          x-go-type: time.Time
+        name:
+          type: string
+          description: Name of the location
+          x-oapi-codegen-extra-tags:
+            gorm: unique
+        description:
+          type: string
+          description: Additional information about the location
+
+    ServiceMapping:
+      type: object
+      x-go-json-ignore: true
+      description: >
+        Used to properly define the allowed external services and possible redirects for them (
+        useful when needed to achive proper bottleneck-free DR). The structure allows to make query
+        with finding the most relevant value based on application and location, in case there is no
+        specific values - the cluster defaults could be used.
+      required:
+        - ID
+        - created_at
+        - location_ID
+        - service
+        - redirect
+        - application_ID
+      properties:
+        ID:
+          type: integer
+          format: int64
+          x-oapi-codegen-extra-tags:
+            gorm: primaryKey
+        created_at:
+          x-go-type: time.Time
+        location_ID:
+          type: integer
+          format: int64
+          x-oapi-codegen-extra-tags:
+            gorm: uniqueIndex:idx_location_service_redirect_app_uniq
+        service:
+          type: string
+          description: FQDN or IP address of the requested service
+          x-oapi-codegen-extra-tags:
+            gorm: uniqueIndex:idx_location_service_redirect_app_uniq
+        redirect:
+          type: string
+          description: FQDN or IP address of where to rediect the service request
+          x-oapi-codegen-extra-tags:
+            gorm: uniqueIndex:idx_location_service_redirect_app_uniq
+        application_ID:
+          type: integer
+          format: int64
+          description: Optional, if need to override the cluster-wide redirects
+          x-oapi-codegen-extra-tags:
+            gorm: uniqueIndex:idx_location_service_redirect_app_uniq
+        application:
+          $ref: '#/components/schemas/Application'
 
   securitySchemes:
     basic_auth:
